--- a/style.css
+++ b/style.css
@@ -419,6 +419,10 @@ body{
         padding: 0;
     }
 
+    .footer{
+        margin-top: 10px;
+    }
+
     .footer__one{
         padding: 10px;
     }
